src/test/deca/syntax/invalid/created/miscellaneous/invalid_characters.deca
// Description :
//    dcaractere sans sygnification
//
// Resultats :
//		Syntaxe error

`@à%$+=&
